# Aoede

./: Cargo.toml  LICENSE  README.md
scripts/: bounce.rhai  key.rhai  resonance_why.rhai  spooky.rhai  test.rhai  wonky.rhai
src/: audio.rs  audio_generator.rs  audio_script.rs  audio_setup.rs  audio_synthesis.rs  composer.rs  main.rs  mt_ringbuffer.rs  shader.wgsl  synthesis.rs
