[package]
name = "fantasia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.14.1"
anyhow = "1.0"
clap = "4.0.23"
tracing-subscriber = "0.3"
egui_wgpu_backend = "0.19"
chrono = "0.4"
pollster = "0.2"
egui = "0.19"
epi = "0.17"
egui_winit_platform = "0.16"
wgpu = "0.13"
winit = { version="0.27.3", features = ["x11"]}
egui_demo_lib = "0.19"
bytemuck = "1.12.3"
crossbeam-queue = "0.3.8"
rhai = "1.12.0"